:hammer: Updated build; added todo page

--- a/src/assets/todo.html
+++ b/src/assets/todo.html
@@ -7,16 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="./style.css">
-  <title>Vapurrmaid | Noteworthy Books & Articles</title>
+  <title>Vapurrmaid | Books To Be Read, Reviewed</title>
 </head>
 
 <body class="container">
 
   <header>
-    <h1>Noteworthy Books & Articles</h1>
+    <h1>To Do</h1>
 
-    <p>A personalized collection of noteworthy abooks, articles and other texts. Items I have not yet read or reviewed
-      are kept on my <a href="todo.html">todo list</a>.</p>
+    <p>Items I'm in the process of reviewing or want to read. Items I have read/reviewed are kept on my <a
+        href="index.html">Noteworthy Texts</a> page.</p>
   </header>
 
   <main>
