--- a/src/assets/todo.html
+++ b/src/assets/todo.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Vapurrmaid | Books To Be Read, Reviewed</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="./style.css">
-  <title>Vapurrmaid | Books To Be Read, Reviewed</title>
-</head>
+  <body class="container">
+    <header>
+      <h1>To Do</h1>
 
-<body class="container">
+      <p>
+        Items I'm in the process of reviewing or want to read. Items I have
+        read/reviewed are kept on my
+        <a href="index.html">Noteworthy Texts</a> page.
+      </p>
+    </header>
 
-  <header>
-    <h1>To Do</h1>
+    <main>
+      %CONTENT%
+    </main>
 
-    <p>Items I'm in the process of reviewing or want to read. Items I have read/reviewed are kept on my <a
-        href="index.html">Noteworthy Texts</a> page.</p>
-  </header>
-
-  <main>
-    %CONTENT%
-  </main>
-
-  <footer class="page-footer white">
-    <div class="footer-copyright">
-      <div class="container grey-text text-darken-4">
-        &copy; 2020 <a href="https://github.com/vapurrmaid/my-bookshelf">Vapurrmaid</a>
+    <footer class="page-footer white">
+      <div class="footer-copyright">
+        <div class="grey-text text-darken-4">
+          <p id="copyrightText" class="indent">
+            <a href="https://github.com/vapurrmaid/my-bookshelf">Vapurrmaid</a>
+          </p>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-</body>
-
+    <script>
+      // insert the current year into the copyright
+      const copyrightText = document.getElementById("copyrightText");
+      copyrightText.insertAdjacentText(
+        "afterbegin",
+        `\u00A9 ${new Date().getFullYear()} `
+      );
+    </script>
+  </body>
 </html>
