--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Vapurrmaid | Noteworthy Books & Articles</title>
   </head>
 
   <body class="container">
+    %NAV%
+
     <header>
       <h1>Noteworthy Books & Articles</h1>
 
       <p>
         A personalized collection of noteworthy abooks, articles and other
-        texts. Items I have not yet read or reviewed are kept on my
-        <a href="todo.html">todo list</a>.
+        texts.
       </p>
     </header>
 
