--- a/src/assets/todo.html
+++ b/src/assets/todo.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Vapurrmaid | Books To Be Read, Reviewed</title>
   </head>
 
   <body class="container">
-    <header>
-      <h1>To Do</h1>
+    %NAV%
 
-      <p>
-        Items I'm in the process of reviewing or want to read. Items I have
-        read/reviewed are kept on my
-        <a href="index.html">Noteworthy Texts</a> page.
-      </p>
+    <header>
+      <h1>Books To Be Reviewed</h1>
+      <p>Items I'm in the process of reviewing or want to read.</p>
     </header>
 
     <main>
